one potential fix on the collapsing issue is clear:both on the row. this allows us to  push the block to where is supposed to. POS.

--- a/week3/Bootstrap-Grid/style.css
+++ b/week3/Bootstrap-Grid/style.css
@@ -70,6 +70,14 @@ a.glyphicon-menu-down.text-center {
 	display: block;
 }
 
+/*about*/
+
+.about {
+	clear: both;
+}
+
+/*Footer*/
+
 footer {
 	background: lavender;
 	color: white;
@@ -79,3 +87,4 @@ footer a {
 	color: white;
 	display: block;
 }
+
